# demoapi

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_server.sh
app_demoapi/: __init__.py  settings.py
