[tool.poetry]
name = "app-demoapi"
version = "0.1.0"
description = ""
authors = ["Max Ermakov <maksim_ermakov@protonmail.com>"]
readme = "README.md"
packages = [{include = "app_demoapi"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
gunicorn = "^20.1.0"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
requests = "^2.28.1"
flask-cors = "^3.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
